# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: __init__.py  core.py  diff.py  files.py  main.py
gendiff/formatting/: __init__.py  core.py  json_like.py  plain.py
gendiff/gendiff/: __init__.py  core.py  diff.py  files.py  formatting.py  out_format.py
gendiff/gendiff/formatting/: __init__.py  core.py  json_like.py  plain.py
gendiff/scripts/: __init__.py  generate_diff.py  main.py
tests/: __init__.py  test_complex.py  test_flat.py  test_json_flat.py
tests/fixtures/: after_complex.json  after_complex.yaml  before_complex.json  before_complex.yml  complex_json_like_result.txt  complex_json_result.json  flat_json_like_result.txt  flat_json_result.json  flat_plain_result.txt
