[tool.poetry]
name = "doedeer-gendiff"
version = "0.0.3"
description = "Show differnces between two files"
authors = ["Doe Deer <gregorylos97@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.0.1"
PyYaml = "^5.3.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
